# OpenPodcar

./: .gitignore  README.md
Arduino/ThrottleControlSerial/: ThrottleControlSerial.ino
OLD/: README
OLD/OLDgazebo/: NOTES  podcarsim.world
OLD/OLDgazebo/models/podcar/: 1.sdf  2.sdf  3.sdf  4.sdf  4.sdg  NOTES_CF  model.config  model.sdf
OLD/OLDgazebo/plugins/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
OLD/OLDgazebo/plugins/catkin_generated/: setup_cached.sh
OLD/OLDgazebo/plugins/devel/: .catkin  .rosinstall  setup.sh
OLD/OLDgazebo/plugins/gtest/: Makefile
OLD/OLDgazebo/plugins/gtest/gtest/: CTestTestfile.cmake
OLD/arduino_bangbang/: linearActuatorSerial-New.ino  linearActuatorTrottleControlSerial.ino  linear_actuator_analog.ino
OLD/lidarLaunchFromSerhan/: people_tracker.launch
OLD/pololuDemos/: pololu_example.c
catkin_ws/: frames.gv
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/FLOBOT/: README.md  flobot_uol_uml.xml
catkin_ws/src/FLOBOT/flobot_tracker_bringup/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/FLOBOT/flobot_tracker_bringup/config/: detectors.yaml
catkin_ws/src/FLOBOT/flobot_tracker_bringup/launch/: flobot_tracker.launch  flobot_tracker.rviz  flobot_tracker_lcas.launch  flobot_tracker_lcas.rviz  flobot_tracker_podcar.launch
catkin_ws/src/FLOBOT/object3d_detector/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/FLOBOT/object3d_detector/launch/: object3d_detector.launch  object3d_detector.rviz
catkin_ws/src/FLOBOT/object3d_detector/libsvm/: pedestrian.model  pedestrian.range
catkin_ws/src/FLOBOT/object3d_detector/src/: object3d_detector.cpp
catkin_ws/src/FLOBOT/pose_grid_map/: CMakeLists.txt  package.xml
catkin_ws/src/FLOBOT/pose_grid_map/launch/: pose_grid_map.launch  pose_grid_map.rviz
catkin_ws/src/FLOBOT/pose_grid_map/src/: pose_grid_map.cpp
catkin_ws/src/FLOBOT/rgbd_leg_detector/: CMakeLists.txt  package.xml
catkin_ws/src/FLOBOT/rgbd_leg_detector/launch/: rgbd_leg_detector.launch  rgbd_leg_detector.rviz
catkin_ws/src/FLOBOT/rgbd_leg_detector/src/: rgbd_leg_detector.cpp
catkin_ws/src/csm/: package.xml
catkin_ws/src/podcar/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/podcar/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  podcar-msg-extras.cmake.installspace.in  setup_cached.sh
catkin_ws/src/podcar/cmake/: podcar-genmsg-context.py  podcar-genmsg.cmake
catkin_ws/src/podcar/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/podcar/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/src/podcar/launch/: clearpath_playpen.world  joystick.launch  podcar.launch  podcar_gmapping.launch  podcarsim.launch  podcarsim.world  podcarsim2real.launch  podcarsim2real_laser_scan_matcher.launch  (+2 more)
docs/: MAINDOC.txt  NOTES  OpenPodcar.bib  OpenPodcar.tex  podcar.aux  podcar.bbl  podcar.bib  podcar.bib.bak  podcar.blg  podcar.out  podcar.tex  podcar.tex.url  pos.txt
docs/hardware/: RiskAssessment.odt  deadManHandle.docx
gazebo/: README.md  podcarsim.launch
gazebo/models/podcar/: NOTES_CF  model.sdf
gazebo/plugins/: podcarGazeboROSPlugin.cpp
gazebo/plugins/catkin_generated/: generate_cached_setup.py
gazebo/plugins/gtest/: CTestTestfile.cmake  cmake_install.cmake
hardware/: billOfMaterials.xlsx  deadManHandle.docx
physicalVehicleNonRos/3D_parts/: LCD_support.FCStd  LCD_support.stl  VLP16_support.FCStd  VLP16_support.stl
physicalVehicleNonRos/3D_parts/PCB_enclosure/: pod car electronics case-LidLeft.stl  pod car electronics case-LidRight.stl  pod car electronics case-StandOff Holder.stl  pod car electronics case-base plate.stl  pod car electronics case-column support.stl  pod car electronics case-triangle support.stl  pod car electronics case.FCStd
physicalVehicleNonRos/PCB/: Podcar_PCB-cache.lib  Podcar_PCB-rescue.lib  Podcar_PCB.kicad_pcb-bak  Podcar_PCB.net  Podcar_PCB.pro  Podcar_PCB.sch  Podcar_PCB.xml  sym-lib-table
physicalVehicleNonRos/PCB/Components/: Adafruit_MCP4725-eagle-import.lib  MCP4725_Breakout-eagle-import.lib  arduino.bak  arduino.lib  battery.lib  connection.bak  connection.lib  dac_mcp4725.lib  deadman_handle.lib  joystick.lib  laptop.lib  lcd_display.lib  linear_actuator.lib  podcar_steering_control.bak  podcar_steering_control.lib  pololu_jrk_v3.lib  psu_12.bak  psu_12.lib  psu_16.bak  psu_16.lib  switch.lib  vlp-16.lib  vlp-16_control_unit.bak  vlp-16_control_unit.lib
physicalVehicleNonRos/PCB/gerber/: Podcar_PCB-B.CrtYd.gbr  Podcar_PCB-B.Cu.gbr  Podcar_PCB-B.Fab.gbr  Podcar_PCB-B.Mask.gbr  Podcar_PCB-B.Paste.gbr  Podcar_PCB-B.SilkS.gbr  Podcar_PCB-Edge.Cuts.gbr  Podcar_PCB-F.CrtYd.gbr  Podcar_PCB-F.Cu.gbr  Podcar_PCB-F.Fab.gbr  Podcar_PCB-F.Mask.gbr  Podcar_PCB-F.Paste.gbr  Podcar_PCB-F.SilkS.gbr  Podcar_PCB-NPTH.drl  Podcar_PCB-PTH.drl  Podcar_PCB-job.gbrjob
physicalVehicleNonRos/testingTools/: slowSpeed.py  zeroSpeed.py
physicalVehicleNonRos/testingTools/JrkCmd/: Actuator.py
physicalVehicleNonRos/testingTools/pololuTestCSerial/: pololu_example.cy
ros/: README.md
(+106 files in other folders)
